<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DirectMssgActivity">

    <include
        android:id="@+id/game_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Polja za unos-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/game_toolbar"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/mail_title"
            android:hint="@string/naslov_poruke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:gravity="left|top"
            android:id="@+id/mail_body"
            android:hint="@string/telo_poruke"
            android:inputType="text|textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

    </LinearLayout>

    <Button
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:padding="15dp"
        android:textSize="16dp"
        android:id="@+id/mail_send"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:text="@string/mail_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="@drawable/bottom_navigation_selector"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>